fixed container alignment in coins.blade + changed navlink:hover color

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -227,7 +227,7 @@ html, main {
 }
 
 .nav-link a:hover, .nav-link:hover, #navbarDropdown:hover {
-    color: #577590;
+    color: var(--richgold);
     text-decoration: none;
  }
 
